...
        <View style={styles.contentContainer}>
          <Text style={styles.headerText}>
          {t('DUE_DATE.WHEN_IS_YOUR_BABY_DUE')}{', '}{name}?
          </Text>
          <View style={styles.datePickerContainer}>
          <RNDateTimePicker
          testID="dateTimePicker"
          value={selectedDate ? selectedDate : new Date()}
          mode={'date'}
          display="default"
          minimumDate={minDate}
          maximumDate={maxDate}
          onChange={onDateChange}
...
          <View style={styles.buttonContainer}>
            <AppButton
              onPress={onContinuePressed}
              text= {t('COMMON.CONTINUE')}
              type="solid"
              disabled = {!selectedDate}
              testID="dateScreenContinuebtn"
            />
          </View>
        </View>
      </View>
  );
};
...
