...
        <View style={styles.contentWrapper}>
          <View style={styles.spaceBetweenContentContainer}>
          <Text style={styles.headerText}>
          {t('WORKOUT.HOW_MANY_TIMES_A_WEEK_WANT_TO_BE_ACTIVE')}
          </Text>
          <Picker
          testID="timePicker"
          style={styles.timePicker}
          selectedValue={selectedTimeOption}
          onValueChange={onTimePickerValueChange}>
          {workoutTimeOptions.map(option => (
            <Picker.Item
              testID={'label'}
...
          </View>
          <View style={styles.buttonContainer}>
            <AppButton
              onPress={onContinuePressed}
              text= {t('COMMON.CONTINUE')}
              type="solid"
              testID='workoutScreenContinuebtn'
            />
          </View>
        </View>
      </View>
  );
};
...
